# cmake_reference

./: CMakeLists.txt  Makefile  ProjectConfig.hpp.in  README.md
libFunc/: CMakeLists.txt  power.cpp  power.hpp
main/: CMakeLists.txt  main.cpp
minimal/: CMakeLists.txt  main.cc
scrap/: func.cmake  loop.cmake  strn.cmake
sfml/: CMakeLists.txt  particles.cc
test/testFunc/: CMakeLists.txt  testFunc.cpp  testFunc.hpp
